@@ -3,6 +3,7 @@ v5.9
 + Added a link on user profiles to their wishlist
 + Added back the achievement section to app pages that Valve mysteriously removed
 + Added sorting options to achievement pages, and the ability to sort by date unlocked
++ Added badge completion and value of card drops to badges page based on avg card price
 + Added extended options for DLC checkboxes that are accessible by clicking "Options ▾".
 + Added price options to search results pages letting you easily filter results by price
 + Incorporated coupon codes into lowest price data
